--- a/etl_sandbox.ipynb
+++ b/etl_sandbox.ipynb
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1574,20 +1574,176 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Florida A&amp;M</th>\n",
+       "      <td>70.1707</td>\n",
+       "      <td>108</td>\n",
+       "      <td>69.3587</td>\n",
+       "      <td>103</td>\n",
+       "      <td>86.7199</td>\n",
+       "      <td>349</td>\n",
+       "      <td>83.5580</td>\n",
+       "      <td>351</td>\n",
+       "      <td>102.232</td>\n",
+       "      <td>134</td>\n",
+       "      <td>...</td>\n",
+       "      <td>156</td>\n",
+       "      <td>50.0000</td>\n",
+       "      <td>225</td>\n",
+       "      <td>46.1871</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0.0888</td>\n",
+       "      <td>140</td>\n",
+       "      <td>0.1084</td>\n",
+       "      <td>334</td>\n",
+       "      <td>10.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UT Rio Grande Valley</th>\n",
+       "      <td>68.4722</td>\n",
+       "      <td>200</td>\n",
+       "      <td>67.4267</td>\n",
+       "      <td>208</td>\n",
+       "      <td>94.7692</td>\n",
+       "      <td>322</td>\n",
+       "      <td>94.8365</td>\n",
+       "      <td>321</td>\n",
+       "      <td>114.564</td>\n",
+       "      <td>345</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28</td>\n",
+       "      <td>63.0573</td>\n",
+       "      <td>11</td>\n",
+       "      <td>56.2579</td>\n",
+       "      <td>277</td>\n",
+       "      <td>0.0687</td>\n",
+       "      <td>307</td>\n",
+       "      <td>0.0952</td>\n",
+       "      <td>276</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Grambling St.</th>\n",
+       "      <td>67.2146</td>\n",
+       "      <td>263</td>\n",
+       "      <td>65.7197</td>\n",
+       "      <td>289</td>\n",
+       "      <td>87.8229</td>\n",
+       "      <td>347</td>\n",
+       "      <td>88.1646</td>\n",
+       "      <td>347</td>\n",
+       "      <td>103.619</td>\n",
+       "      <td>166</td>\n",
+       "      <td>...</td>\n",
+       "      <td>246</td>\n",
+       "      <td>42.5494</td>\n",
+       "      <td>342</td>\n",
+       "      <td>55.2786</td>\n",
+       "      <td>258</td>\n",
+       "      <td>0.0927</td>\n",
+       "      <td>104</td>\n",
+       "      <td>0.1006</td>\n",
+       "      <td>308</td>\n",
+       "      <td>3.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arkansas Pine Bluff</th>\n",
+       "      <td>65.3422</td>\n",
+       "      <td>327</td>\n",
+       "      <td>63.9919</td>\n",
+       "      <td>333</td>\n",
+       "      <td>86.6389</td>\n",
+       "      <td>350</td>\n",
+       "      <td>88.7669</td>\n",
+       "      <td>345</td>\n",
+       "      <td>107.009</td>\n",
+       "      <td>248</td>\n",
+       "      <td>...</td>\n",
+       "      <td>85</td>\n",
+       "      <td>47.0326</td>\n",
+       "      <td>291</td>\n",
+       "      <td>59.0361</td>\n",
+       "      <td>321</td>\n",
+       "      <td>0.1086</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0.1253</td>\n",
+       "      <td>351</td>\n",
+       "      <td>5.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Northern Arizona</th>\n",
+       "      <td>71.0511</td>\n",
+       "      <td>79</td>\n",
+       "      <td>70.2097</td>\n",
+       "      <td>73</td>\n",
+       "      <td>92.3133</td>\n",
+       "      <td>334</td>\n",
+       "      <td>92.3473</td>\n",
+       "      <td>333</td>\n",
+       "      <td>114.295</td>\n",
+       "      <td>344</td>\n",
+       "      <td>...</td>\n",
+       "      <td>265</td>\n",
+       "      <td>52.4409</td>\n",
+       "      <td>164</td>\n",
+       "      <td>53.7150</td>\n",
+       "      <td>210</td>\n",
+       "      <td>0.0866</td>\n",
+       "      <td>163</td>\n",
+       "      <td>0.0881</td>\n",
+       "      <td>203</td>\n",
+       "      <td>3.1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 120 columns</p>\n",
+       "<p>5 rows × 120 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Tempo, RankTempo, AdjTempo, RankAdjTempo, OE, RankOE, AdjOE, RankAdjOE, DE, RankDE, AdjDE, RankAdjDE, AdjEM, RankAdjEM, seed, eFG_Pct_O, RankeFG_Pct_O, TO_Pct_O, RankTO_Pct_O, OR_Pct_O, RankOR_Pct_O, FT_Rate_O, RankFT_Rate_O, eFG_Pct_D, RankeFG_Pct_D, TO_Pct_D, RankTO_Pct_D, OR_Pct_D, RankOR_Pct_D, FT_Rate_D, RankFT_Rate_D, OFF_FT, OFF_FT_Rank, OFF_2PT, OFF_2PT_Rank, OFF_3PT, OFF_3PT_Rank, DEF_FT, DEF_FT_Rank, DEF_2PT, DEF_2PT_Rank, DEF_3PT, DEF_3PT_Rank, Height, RankHeight, HgtC, RankHgtC, HgtPF, RankHgtPF, HgtSF, RankHgtSF, HgtSG, RankHgtSG, HgtPG, RankHgtPG, HgtEff, RankHgtEff, Exp, RankExp, Bench, RankBench, PtsC, RankPtsC, PtsPF, RankPtsPF, PtsSF, RankPtsSF, PtsSG, RankPtsSG, PtsPG, RankPtsPG, ORC, RankORC, ORPF, RankORPF, ORSF, RankORSF, ORSG, RankORSG, ORPG, RankORPG, DRC, RankDRC, DRPF, RankDRPF, DRSF, RankDRSF, DRSG, RankDRSG, DRPG, RankDRPG, FG2Pct, RankFG2Pct, FG3Pct, RankFG3Pct, FTPct, RankFTPct, BlockPct, RankBlockPct, OppFG2Pct, ...]\n",
-       "Index: []\n",
+       "                        Tempo  RankTempo  AdjTempo  RankAdjTempo       OE  \\\n",
+       "TeamName                                                                    \n",
+       "Florida A&M           70.1707        108   69.3587           103  86.7199   \n",
+       "UT Rio Grande Valley  68.4722        200   67.4267           208  94.7692   \n",
+       "Grambling St.         67.2146        263   65.7197           289  87.8229   \n",
+       "Arkansas Pine Bluff   65.3422        327   63.9919           333  86.6389   \n",
+       "Northern Arizona      71.0511         79   70.2097            73  92.3133   \n",
        "\n",
-       "[0 rows x 120 columns]"
+       "                      RankOE    AdjOE  RankAdjOE       DE  RankDE  \\\n",
+       "TeamName                                                            \n",
+       "Florida A&M              349  83.5580        351  102.232     134   \n",
+       "UT Rio Grande Valley     322  94.8365        321  114.564     345   \n",
+       "Grambling St.            347  88.1646        347  103.619     166   \n",
+       "Arkansas Pine Bluff      350  88.7669        345  107.009     248   \n",
+       "Northern Arizona         334  92.3473        333  114.295     344   \n",
+       "\n",
+       "                              ...           RankOppF3GRate    ARate  \\\n",
+       "TeamName                      ...                                     \n",
+       "Florida A&M                   ...                      156  50.0000   \n",
+       "UT Rio Grande Valley          ...                       28  63.0573   \n",
+       "Grambling St.                 ...                      246  42.5494   \n",
+       "Arkansas Pine Bluff           ...                       85  47.0326   \n",
+       "Northern Arizona              ...                      265  52.4409   \n",
+       "\n",
+       "                      RankARate  OppARate  RankOppARate  StlRate  RankStlRate  \\\n",
+       "TeamName                                                                        \n",
+       "Florida A&M                 225   46.1871            34   0.0888          140   \n",
+       "UT Rio Grande Valley         11   56.2579           277   0.0687          307   \n",
+       "Grambling St.               342   55.2786           258   0.0927          104   \n",
+       "Arkansas Pine Bluff         291   59.0361           321   0.1086           27   \n",
+       "Northern Arizona            164   53.7150           210   0.0866          163   \n",
+       "\n",
+       "                      OppStlRate  RankOppStlRate  DefensiveFingerprint  \n",
+       "TeamName                                                                \n",
+       "Florida A&M               0.1084             334                  10.8  \n",
+       "UT Rio Grande Valley      0.0952             276                   0.5  \n",
+       "Grambling St.             0.1006             308                   3.7  \n",
+       "Arkansas Pine Bluff       0.1253             351                   5.1  \n",
+       "Northern Arizona          0.0881             203                   3.1  \n",
+       "\n",
+       "[5 rows x 120 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1602,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
