--- a/bracket_buddy/kenpomscrape.ipynb
+++ b/bracket_buddy/kenpomscrape.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup\n",
     "import os\n",
-    "import glob"
+    "import glob\n",
+    "from config import user, pwd"
    ]
   },
   {
@@ -40,8 +41,8 @@
    "outputs": [],
    "source": [
     "url = 'https://kenpom.com'\n",
-    "password = 'dataanalytics'\n",
-    "email = 'brianwilliampate@gmail.com'\n",
+    "password = pwd\n",
+    "email = user\n",
     "browser = init_browser()\n",
     "browser.visit(url)"
    ]
@@ -61,19 +62,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'time' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-3530f94f5d6e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0murl2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'https://kenpom.com/hca.php'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mbrowser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvisit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'time' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "url2 = 'https://kenpom.com/hca.php'\n",
     "browser.visit(url2)\n"
@@ -1726,7 +1715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
